# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-image.yml
.sqlx/: query-bcfcfebc6f5e8ffbf97d97c5a209be78b46d703924482cf8b43842705fcb7714.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20230922112941_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
